src/index.css
* {
  margin: 0;
  font-family: "inter";
}

html {
  scroll-behavior: smooth;
}

.subtext {
  color: white;
  font-size: 50px;
  text-align: center;
}

.subtext2 {
  color: white;
  font-size: 18px;
  text-align: center;
  width: 40vw;
}

.headshot {
  max-height: 300px;
  border-radius: 400px;
  margin-top: -100px;
}

.main {
  background: #14110f;
  min-height: 2500px;
  border: 0.5px solid black;
  width: auto;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  margin-top: 50px;
  gap: 50px;
  margin: auto;
}

.icon {
  width: 50px;
}

.icons {
  display: flex;
  gap: 2rem;
}

.experience {
  margin: auto;
  text-align: center;
  margin-bottom: 50px;
}

.experience--container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 60%;
  margin: auto;
}

.experience--section {
  flex-direction: column;
  display: flex;
  gap: 20px;
}

.experience--title {
  color: white;
  width: 350px;
}

@media screen and (max-width: 1000px) {
  .experience--container {
    width: auto;
  }
  .experience--icon {
    scale: 65%;
  }
  .experience {
    margin-bottom: 0;
  }
  .main {
    height: 3700px;
  }
  .subtext2 {
    width: 80vw;
  }

  .experience--title {
    width: 200px;
  }
}
.experience--icon {
  border-radius: 400px;
  width: 175px;
  padding: 1rem;
  background-color: white;
}

.experience--description {
  color: grey;
}

.links {
  display: flex;
  gap: 18px;
  text-decoration: none;
  color: grey;
  cursor: pointer;
}

#skills {
  padding: 4rem 1rem;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#skills h1 {
  font-size: 3rem;
  margin-bottom: 3rem;
  color: white;
}

.skills-grid {
  width: 60vw;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  gap: 2rem;
  justify-items: center;
}

.skill-item {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.skill-item img {
  width: 80px;
  height: 80px;
  border-radius: 30%;
  padding: 1rem;
  background-color: #ffffff;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  transition: 0.3s ease;
}

.skill-item img:hover {
  transform: scale(1.1);
}

.skill--label {
  margin-top: 8px;
  color: white;
}

#projects {
  text-align: center;
}

#projects h1 {
  font-size: 3rem;
  margin-bottom: 2rem;
  color: white;
}

.projects-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
  gap: 2rem;
  max-width: 1200px;
  margin: 0 auto;
}

.project-card {
  padding: 8px;
  background-color: #fff;
  border-radius: 12px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  transition: transform 0.3s ease;
}

.project-card:hover {
  transform: translateY(-5px);
}

.project-card h3 {
  font-size: 1.25rem;
  color: #333;
  margin-bottom: 4px;
}

.project-card p {
  color: #666;
  font-size: 0.95rem;
  line-height: 1.4;
  padding: 0 0.5rem;
}

.github--redirect {
  width: 3.5%;
}

.Waterloo {
  width: 1.2em;
  text-align: center;
  vertical-align: -0.2em;
}

.a-underline-animation {
  color: inherit;
  display: inline-block;
  position: relative;
  text-decoration: none;
}
.a-underline-animation::after {
  content: "";
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #ffffff;
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}
.a-underline-animation:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

.email {
  position: relative;
  top: 8px;
}

.project-image {
  width: 100%;
  height: 180px;
  object-fit: cover;
  display: block;
}

.bricked-video {
  width: 100%;
  height: 180px;
  object-fit: cover;
  display: block;
}

